modified:     se soluciono el problema de lectura de archivos en la consola,     esto creando un modelo de archivo que se encarga de leer y escribir archivos,     se modifico el CryptoBox para que pueda leer y escribir archivos,     se modifico el MainCLI para que pueda leer archivos y     se modifico el Utils para que pueda leer archivos.